[tool.poetry]
name = "exchange-rate"
version = "0.2.0"
description = "A sample Python project showing exchange rate between two currencies"
authors = ["matihost"]
license = "MIT"
readme = "README.md"
packages = [{include = "exchange_rate", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
Flask = "^3.1.0"
waitress = "^3.0.2"
babel = "^2.17.0"

[tool.poetry.scripts]
exchange-rate = 'exchange_rate.cli.exchange_rate:main'
exchange-rate-web = 'exchange_rate.cli.exchange_rate_web:main'


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
mypy = "^1.15.0"
pytest = "^8.3.5"
debugpy = "^1.8.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",  # PEP8 naming convetions
    "D"  # pydocstyle
]
ignore = [
    "E501",  # line too long
    "D401",  # imperative mood
    "D104"   # missing docstring in public package
]

[tool.ruff.lint.pydocstyle]
convention = "google"
