[tool.poetry]
name = "tools"
version = "0.2.0"
description = "Project with CLI tools: setup-opendns, automount-cifs"
authors = ["matihost"]
license = "MIT"
readme = "README.md"
packages = [{include = "tools", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
jinja2 = "^3.1.5"
markupsafe = "^3.0.2"

[tool.poetry.scripts]
automount-cifs = 'tools.cli.automount_cifs:main'
setup-opendns = 'tools.cli.setup_opendns:main'


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
mypy = "^1.15.0"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",  # PEP8 naming convetions
    "D"  # pydocstyle
]
ignore = [
    "E501",  # line too long
    "D401",  # imperative mood
    "D104"   # missing docstring in public package
]

[tool.ruff.lint.pydocstyle]
convention = "google"
