[tool.poetry]
name = "website-api"
version = "0.1.0"
description = "Website API"
authors = ["matihost"]
license = "MIT"
readme = "README.md"
packages = [{include = "website", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}
mangum = "^0.19.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
mypy = "^1.11.2"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",  # PEP8 naming convetions
    "D"  # pydocstyle
]
ignore = [
    "E501",  # line too long
    "D401",  # imperative mood
    "D104"   # missing docstring in public package
]

[tool.ruff.lint.pydocstyle]
convention = "google"
